--- a/style.css
+++ b/style.css
@@ -1,39 +1,45 @@
-/* style.css */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  background-color: #f9f9f9;
+  background-color: #FDFBF8 !important;
 }
 
 .custom-navbar {
-  transition: background-color 0.7s ease;
-  background-color: rgba(0, 0, 0, 0.8); /* awal: sedikit transparan */
+  background: linear-gradient(to right, #4FC3F7, #81D4FA);
 }
 
 .custom-navbar.transparent {
-  background-color: rgba(0, 0, 0, 0); /* saat scroll: lebih transparan */
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.1));
   backdrop-filter: blur(2px);
-  /* box-shadow: 0 2px 4px rgba(0,0,0,0.1); */
 }
 
 .custom-navbar.transparent .navbar-brand,
 .custom-navbar.transparent .nav-link {
-  color: black !important; /* pastikan warna hitam override */
+  color: #333333 !important; /* pastikan warna hitam override */
 }
 
-.hero {
-  color: white;
-  text-align: center;
-  padding: 4rem 1rem;
+.navbar-brand,
+.nav-link {
+  color: #333333 !important;
+}
+
+.nav-link:hover{
+  /*-color: rgba(255, 255, 255, 0.2); */
+  color: #FAF6EB !important;
+}
+
+.custom-navbar.transparent .nav-link:hover {
+  background-color: #FAF6EB !important;
 }
 
 .profil, .umkm, .kontak {
-  padding: 2rem;
-  background-color: white;
+  padding: 2rem 1rem;
+  background-color: #FDFBF8;
   margin: 1rem auto;
-  max-width: 900px;
+  margin-top: 4rem;
+  max-width: 95vw;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
@@ -53,8 +59,8 @@ body {
 
 footer {
   text-align: center;
-  background-color: #004d40;
-  color: white;
+  background-color: #EADDBB;
+  color: #5D4037 ;
   padding: 1rem;
   margin-top: 2rem;
 }
@@ -72,4 +78,41 @@ footer {
   height: 100%;
   background: rgba(0, 0, 0, 0.8); /* ubah 0.4 jadi lebih besar untuk lebih gelap */
   z-index: 1;
+}
+
+#carouselExampleAutoplaying::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px; /* tinggi area blur */
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 25%, rgba(253,251,248,1) 100%);
+  pointer-events: none;
+  z-index: 1;
+}
+
+.umkm img {
+  height: 300px;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .umkm img {
+    height: 200px;
+  }
+}
+
+.wa-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.wa-hover {
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+.wa-hover:hover {
+  transform: scale(1.1);
 }
